--- a/server/package.json
+++ b/server/package.json
@@ -9,14 +9,18 @@
     "dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "^4.19.2",
-    "mongoose": "^8.3.2",
+    "express": "^4.21.2",
+    "mongoose": "^8.17.0",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^24.1.0",
+    "typescript": "^5.9.2"
   }
 }
